# doompp

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
cmake/: ConfigureRcFile.cmake
src/: CMakeLists.txt  main.cpp  window.cpp  window.h
win/: doompp.rc.in
